update explanation of Final Comments

--- a/Guidelines_for_Papers.tex
+++ b/Guidelines_for_Papers.tex
@@ -422,7 +422,7 @@ https://owl.english.purdue.edu/owl/resource/635/01/
 
 \end{issues}
 
-\subsection*{Final Comments (Note: + indicates a strength of this paper, while \textminus\ indicates an area for improvement)}
+\subsection*{Final Comments (Note that a + sign indicates a strength of this paper, while a \textminus\ sign indicates a critique)}
 
 
 %\end{minipage}
