add pilcrows, a Cairns poem, and a classic formula

--- a/Guidelines_for_Papers.tex
+++ b/Guidelines_for_Papers.tex
@@ -292,20 +292,55 @@ been described above: a sound thesis statement, mature and topical
 supporting paragraphs, competence in secondary literature, and a solid
 exegetical foundation. There is considerable freedom in how these
 elements may be combined, which means there is scope for creativity.
-[\emph{This handout, too, is a work in progress! TK\ldots}]
+Then again, the argumentative essay is an established genre. While a
+final thesis for a graduate-level course should take you well beyond the
+classic formula of a five-paragraph essay, it can help to recall the
+core elements of that exercise, which are (1) an introductory paragraph
+with a concise thesis statement, (2) body paragraphs that support the
+paper's thesis with evidence, analysis, and argument, and (3) a
+concluding paragraph that synthesizes the total argument in view of its
+evidential basis.
 
-How might you approach such a big job? My main advice is to take it in
-stages, separated by several good nights of sleep. Leaving most of the
-work to the day before a deadline is no recipe for success. Give
-yourself as much time as you can to revise your work, knowing that
-writing is a rigorous process. Write. Reflect. Rewrite. Edit. Repeat as
-necessary. It takes real effort to make prose appear effortless.
+%[\emph{This handout, too, is a work in progress! TK\ldots}]
+
+How might you approach the job? My main advice is to take it in stages,
+separated by several good nights of sleep. Leaving most of the work to
+the day before a deadline is no recipe for success. Give yourself as
+much time as you can to revise your work, knowing that writing is a
+rigorous process. Write. Reflect. Rewrite. Edit. Repeat as necessary. It
+takes real effort to make prose appear effortless.
 
 \section{Write, Reflect, Rewrite, Edit}
 
 \subsection{Write Shitty Rough Drafts}
 
 \subsection{Take a Nap}
+
+
+“On Slow Learning,” by Scott Cairns\footnote{In \emph{Compass of Affection: New and Selected Poems} (Brewster, MA: Paraclete Press, 2006), 5, and republished in the Spring 2013 issue of \emph{Comment} <https://www.cardus.ca/comment/article/on-slow-learning/>.}
+
+\begin{verse}
+If you have ever owned\\
+a tortoise, you already know\\
+how difficult paper training can be\\
+for some pets.
+
+Even if you get so far\\
+as to instill in your tortoise\\
+the the value of achieving the paper\\
+there remains one obstacle—\\
+your tortoise’s intrinsic sloth.
+
+Even a well-intentioned tortoise\\
+may find himself, in his journeys\\
+to be painfully far from the mark.
+
+Failing, your tortoise may shy away\\
+for weeks within his shell,\\
+utterly ashamed, or looking up with tiny,\\
+wet eyes might offer an honest shrug.\\
+Forgive him.
+\end{verse}
 
 \subsection{Write and Rewrite}
 
@@ -314,67 +349,6 @@ necessary. It takes real effort to make prose appear effortless.
 See the Online Writing Lab (OWL) at Purdue University for details.
 Search for “Paramedic Method” or go to:
 https://owl.english.purdue.edu/owl/resource/635/01/
-
-%Use the Paramedic Method (originally developed by Richard Lanham in
-%\emph{Revising Prose}) to edit any kind of professional writing. Editing
-%your professional writing using the Paramedic Method will make your
-%prose easier to read. Sentences that are easy to read are more
-%persuasive and more user-centered.
-%
-%Professional writers understand the need for clear, concise prose. An
-%industry standard for helping workplace writers achieve user-centered,
-%persuasive, and clear prose is the Paramedic Method. When you use the
-%Paramedic Method, you will reduce your word count by eliminating
-%unnecessary words. The Paramedic Method also helps you activate your
-%sentences by eliminating passive voice and redundancies. The Paramedic
-%Method is an easy to learn, systematic way to make your sentences more
-%persuasive and more user-centered.
-%
-%Follow the seven steps below to improve the readability of your sentences.
-%
-%\subsection{The Paramedic Method}
-%
-%\begin{enumerate}
-%\item Circle the prepositions (of, in, about, for, onto, into)
-%\item Draw a box around the “is” verb forms
-%\item Ask, “Where's the action?”
-%\item Change the “action” into a simple verb
-%\item Move the doer into the subject (Who's kicking whom)
-%\item Eliminate any unnecessary slow wind-ups
-%\item Eliminate any redundancies
-%\end{enumerate}
-%
-%\subsection{Now You Try}
-%
-%Use the Paramedic Method in the sentences below to practice making your
-%sentences more concise. After you use the Paramedic Method on these
-%sentences, check your results against the sentences at the bottom of
-%this handout.
-%
-%\begin{enumerate}
-%\item The point I wish to make is that the employees working at this company are in need of a much better manager of their money.
-%\item It is widely known that the engineers at Sandia Labs have become active participants in the Search and Rescue operations in most years.
-%\item After reviewing the results of your previous research, and in light of the relevant information found within the context of the study, there is ample evidence for making important, significant changes to our operating procedures.
-%\end{enumerate}
-%
-%Example Concise Solutions:
-%
-%\begin{enumerate}
-%\item Employees at this company need a better money manager. (Original word count: 26. New word count: 10).
-%\item In recent years, engineers at Sandia Labs have participated in the Search and Rescue operations. (Original word count: 24. New word count: 16).
-%\item After reviewing the results of your research, and within the context of the study, we find evidence supporting significant changes in our operating procedures. (Original word count: 36. New word count: 25).
-%\end{enumerate}
-%
-%Copyright ©1995-2018 by The Writing Lab & The OWL at Purdue and Purdue
-%University. All rights reserved. This material may not be published,
-%reproduced, broadcast, rewritten, or redistributed without permission.
-%Use of this site constitutes acceptance of our terms and conditions of
-%fair use.
-
-%\mbox{}\par
-%\centering
-%\noindent
-%\begin{minipage}{\textwidth}
 
 \onecolumn
 \thispagestyle{empty}
@@ -409,7 +383,7 @@ https://owl.english.purdue.edu/owl/resource/635/01/
 \item Introduction Weak: Phatic device/Lack of clarity/Lack of development
 \item Poor Organization: Ideas scattered/Illogical order/Irrelevant material
 \item Inadequate Explanation: Need more: Details/Descriptions/Examples/Illustrations/Quotes
-\item Paragraphs Lacking: Unity/Coherence/Development
+\item Paragraphs (\emph{\P\P}) Lacking: Unity/Coherence/Development
 \item Transitions (\emph{trans.}): Paragraphs change abruptly/You need to connect one idea to another
 \item Sentence Style Too Similar: Vary the types and lengths more often
 \item Conclusion: Does not bring the essay to a satisfying or natural close
