reword a line, change poem package

--- a/Guidelines_for_Papers.tex
+++ b/Guidelines_for_Papers.tex
@@ -18,10 +18,11 @@
 \allsectionsfont{\sffamily}
 \frenchspacing
 
-% Tables, links, and metadata
+% Tables, links, metadata, poems
 \usepackage{array}     % allow insertions of column styling with >{}
 \usepackage{booktabs}  % elegant horizontal rules in tables
 \usepackage{graphicx}
+\usepackage{verse}
 
 % Issue list
 \usepackage{enumitem}
@@ -113,8 +114,8 @@ precise, it is nearly impossible to have a good paper.
 
 \vfill
 
-{\noindent\itshape In class or at home: rewrite the poor thesis
-at the top of this column. Make it restricted, unified, and precise.}
+{\noindent\itshape In class or at home: rewrite the poor thesis in the
+paragraph on unity, above. Make it restricted, unified, and precise.}
 
 \section{Consider the Specific Assignment}
 
@@ -317,29 +318,31 @@ takes real effort to make prose appear effortless.
 \subsection{Take a Nap}
 
 
-“On Slow Learning,” by Scott Cairns\footnote{In \emph{Compass of Affection: New and Selected Poems} (Brewster, MA: Paraclete Press, 2006), 5, and republished in the Spring 2013 issue of \emph{Comment} <https://www.cardus.ca/comment/article/on-slow-learning/>.}
+Or, read a poem, such as the following one by Scott Cairns.\footnote{In \emph{Compass of Affection: New and Selected Poems} (Brewster, MA: Paraclete Press, 2006), 5, and republished in \emph{Comment} (Spring 2013) <https://www.cardus.ca/comment/article/on-slow-learning/>.}
 
-\begin{verse}
+\poemtitle{\sffamily On Slow Learning}
+\settowidth{\versewidth}{to be painfully far from the mark.}
+\begin{verse}[\versewidth]
 If you have ever owned\\
 a tortoise, you already know\\
 how difficult paper training can be\\
-for some pets.
+for some pets.\\!
 
 Even if you get so far\\
 as to instill in your tortoise\\
 the the value of achieving the paper\\
 there remains one obstacle—\\
-your tortoise’s intrinsic sloth.
+your tortoise’s intrinsic sloth.\\!
 
 Even a well-intentioned tortoise\\
 may find himself, in his journeys\\
-to be painfully far from the mark.
+to be painfully far from the mark.\\!
 
 Failing, your tortoise may shy away\\
 for weeks within his shell,\\
 utterly ashamed, or looking up with tiny,\\
 wet eyes might offer an honest shrug.\\
-Forgive him.
+Forgive him.\\!
 \end{verse}
 
 \subsection{Write and Rewrite}
