update abbrevs on assessment sheet

--- a/Guidelines_for_Papers.tex
+++ b/Guidelines_for_Papers.tex
@@ -366,13 +366,13 @@ https://owl.english.purdue.edu/owl/resource/635/01/
 \item Comma Splice (\emph{cs}): Comma used in the place of a period
 \item Run-on (\emph{RO}): Two independent clauses cannot be fused together
 \item Fragment (\emph{frag}): Incomplete sentence, usually missing a verb
-\item Agreement Error (\emph{agr/S-V/ref}): Subject-verb or pronoun-antecedent
+\item Agreement Error (\emph{agr/ref}): Subject-verb or pronoun-antecedent
 \item Not Parallel (\emph{//}): Sentence elements incorrectly linked; they must be coordinated
 \item Verb Error (\emph{vb}): The wrong verb tense is used, or it changes without good reason
 \item Passive Voice (\emph{PV}): Verbs should be active
 \item Redundant (\emph{rep}): Do not repeat words or ideas unnecessarily
 \item Spelling/Wrong Word (\emph{sp/ww}): Check the dictionary for standard usage
-\item Punctuation: Observe the standard rules
+\item Punctuation (\emph{P}): Observe the standard rules
 \item Clichés: They do not creatively engage the reader with fresh expression
 \item Miscellaneous:
 
@@ -382,7 +382,7 @@ https://owl.english.purdue.edu/owl/resource/635/01/
 
 \begin{issues}
 
-\item Thesis Problem: Missing/Unclear/Weak/Nonspecific/Awkward/Not proven by the paper
+\item Thesis Problem (\emph{T}): Missing/Unclear/Weak/Nonspecific/Awkward/Not proven by the paper
 \item Introduction Weak: Phatic device/Lack of clarity/Lack of development
 \item Poor Organization: Ideas scattered/Illogical order/Irrelevant material
 \item Inadequate Explanation: Need more: Details/Descriptions/Examples/Illustrations/Quotes
