--- a/Guidelines_for_Papers.tex
+++ b/Guidelines_for_Papers.tex
@@ -17,6 +17,7 @@
 \usepackage{sectsty}
 \allsectionsfont{\sffamily}
 \frenchspacing
+\usepackage[normalem]{ulem} % provides strikethrough with \sout{}
 
 % Tables, links, metadata, poems
 \usepackage{array}     % allow insertions of column styling with >{}
@@ -363,16 +364,17 @@ https://owl.english.purdue.edu/owl/resource/635/01/
 
 \item Format Violations: Follow \emph{The SBL Handbook of Style}, 2nd ed. (which supplements \emph{The Chicago Manual of Style})
 \item Awkward Sentence (\emph{awk}): Wordy/Strange meaning/Clumsy arrangement
-\item Comma Splice (\emph{cs}): Comma used in the place of a period
-\item Run-on (\emph{RO}): Two independent clauses cannot be fused together
 \item Fragment (\emph{frag}): Incomplete sentence, usually missing a verb
+\item Run-on (\emph{RO}): Two independent clauses have been fused together
+\item Comma Splice (\emph{cs}): Comma used in the place of a period, or without a coordinating conjunction
+\item Predication Fault (\emph{pred}): The grammatical subject is disconnected from what follows (the predicate)
 \item Agreement Error (\emph{agr/ref}): Subject-verb or pronoun-antecedent
-\item Not Parallel (\emph{//}): Sentence elements incorrectly linked; they must be coordinated
 \item Verb Error (\emph{vb}): The wrong verb tense is used, or it changes without good reason
-\item Passive Voice (\emph{PV}): Verbs should be active
+\item Not Parallel (\emph{//}): Sentence elements incorrectly linked; they must be coordinated
+\item Passive Voice (\emph{PV}): \sout{Active voice is preferred} Write with active verbs
 \item Redundant (\emph{rep}): Do not repeat words or ideas unnecessarily
 \item Spelling/Wrong Word (\emph{sp/ww}): Check the dictionary for standard usage
-\item Punctuation (\emph{P}): Observe the standard rules
+\item Punctuation (\emph{P}): Observe the standard rules; consult Ch. 17 in \emph{Making Sense in Religious Studies}
 \item Clichés: They do not creatively engage the reader with fresh expression
 \item Miscellaneous:
 
@@ -387,14 +389,14 @@ https://owl.english.purdue.edu/owl/resource/635/01/
 \item Poor Organization: Ideas scattered/Illogical order/Irrelevant material
 \item Inadequate Explanation: Need more: Details/Descriptions/Examples/Illustrations/Quotes
 \item Paragraphs (\emph{\P\P}) Lacking: Unity/Coherence/Development
-\item Transitions (\emph{trans.}): Paragraphs change abruptly/You need to connect one idea to another
+\item Transitions (\emph{trans.}): Paragraphs change abruptly/Ideas are not clearly connected to one another
 \item Sentence Style Too Similar: Vary the types and lengths more often
 \item Conclusion: Does not bring the essay to a satisfying or natural close
 \item Persuasive Caliber: Lacks logic/Lacks passion/Lacks credibility/Lacks clarity/Lacks interpretation
 \item Reasoning Flaws: Overgeneralizations/Unqualified statements/Lack of proof or support
 \item Audience: The writing does not engage a particular group or person
-\item Tone: Not appropriate or consistent with the subject or audience
-\item Style: Too formal/Too colloquial for the subject or purpose of the writing
+\item Tone: Too informal/Too personal/Too formal/Biased language; maintain a style appropriate to the audience
+\item Diction (\emph{D}): Too colloquial/Too stiff/Jargon heavy; aim to balance Latinate and Anglo-Saxon words
 \item Miscellaneous:
 
 \end{issues}
