refine options for paper feedback

--- a/Guidelines_for_Papers.tex
+++ b/Guidelines_for_Papers.tex
@@ -375,7 +375,7 @@ https://owl.english.purdue.edu/owl/resource/635/01/
 \item Redundant (\emph{rep}): Do not repeat words or ideas unnecessarily
 \item Spelling/Wrong Word (\emph{sp/ww}): Check the dictionary for standard usage
 \item Punctuation (\emph{P}): Observe the standard rules; consult Ch. 17 in \emph{Making Sense in Religious Studies}
-\item Clichés: They do not creatively engage the reader with fresh expression
+\item Clichés: Overused phrases do not creatively engage the reader with fresh expression
 \item Miscellaneous:
 
 \end{issues}
@@ -394,9 +394,9 @@ https://owl.english.purdue.edu/owl/resource/635/01/
 \item Conclusion: Does not bring the essay to a satisfying or natural close
 \item Persuasive Caliber: Lacks logic/Lacks passion/Lacks credibility/Lacks clarity/Lacks interpretation
 \item Reasoning Flaws: Overgeneralizations/Unqualified statements/Lack of proof or support
-\item Audience: The writing does not engage a particular group or person
-\item Tone: Too informal/Too personal/Too formal/Biased language; maintain a style appropriate to the audience
-\item Diction (\emph{D}): Too colloquial/Too stiff/Jargon heavy; aim to balance Latinate and Anglo-Saxon words
+\item Audience/Occasion: The writing does not engage a particular group or person, or it lacks purpose
+\item Tone: Too personal/Too informal/Too formal/Biased language; maintain an appropriate style
+\item Diction (\emph{D}): Too colloquial/Vague/Wordy/Jargon heavy; balance Latinate and Anglo-Saxon words
 \item Miscellaneous:
 
 \end{issues}
