shorten recommended passage length, tinker with words

--- a/Guidelines_for_Papers.tex
+++ b/Guidelines_for_Papers.tex
@@ -221,9 +221,8 @@ question.
 \subsection{The Exegetical Essay}
 
 The basic task of an exegetical essay is to identify a suitable passage
-from the Bible (between four and eight verses long, and certainly not
-more than ten), and to offer a reading of it that supports an
-appropriate thesis.
+from the Bible (perhaps three to six verses), and to offer a reading
+of it that supports a thesis.
 
 The biblical exegete needs a plan of attack. Unfortunately, I know of no
 method that applies universally. I took a few courses on the Bible when
@@ -375,7 +374,7 @@ https://owl.english.purdue.edu/owl/resource/635/01/
 \item Redundant (\emph{rep}): Do not repeat words or ideas unnecessarily
 \item Spelling/Wrong Word (\emph{sp/ww}): Check the dictionary for standard usage
 \item Punctuation (\emph{P}): Observe the standard rules; consult Ch. 17 in \emph{Making Sense in Religious Studies}
-\item Clichés: Overused phrases do not creatively engage the reader with fresh expression
+\item Clichés: Overused phrases do not engage the reader with fresh expression
 \item Miscellaneous:
 
 \end{issues}
