correct Cairns poem line breaks, update ref

--- a/Guidelines_for_Papers.tex
+++ b/Guidelines_for_Papers.tex
@@ -318,29 +318,33 @@ takes real effort to make prose appear effortless.
 \subsection{Take a Nap}
 
 
-Or, read a poem, such as the following one by Scott Cairns.\footnote{In \emph{Compass of Affection: New and Selected Poems} (Brewster, MA: Paraclete Press, 2006), 5, and republished in \emph{Comment} (Spring 2013) <https://www.cardus.ca/comment/article/on-slow-learning/>.}
+Or, read a poem, such as the following one by Scott
+Cairns.\footnote{First printed in \emph{The Theology of Doubt} (1985),
+Cairns's “On Slow Learning” is reprinted in \emph{Compass of Affection:
+Poems New and Selected} (Brewster, MA: Paraclete Press, 2006), 5.}
 
 \poemtitle{\sffamily On Slow Learning}
 \settowidth{\versewidth}{how difficult paper training can be}
 \begin{verse}[\versewidth]
 If you have ever owned\\
 a tortoise, you already know\\
-how difficult paper training can be\\
+how terribly difficult\\
+paper training can be\\
 for some pets.
 
 Even if you get so far\\
 as to instill in your tortoise\\
-the value of achieving the paper\\
-there remains one obstacle—\\
+the value of achieving the paper,\\
+there remains one obstacle---\\
 your tortoise’s intrinsic sloth.
 
 Even a well-intentioned tortoise\\
-may find himself, in his journeys\\
+may find himself, in his journeys,\\
 to be painfully far from the mark.
 
 Failing, your tortoise may shy away\\
-for weeks within his shell,\\
-utterly ashamed, or looking up with tiny,\\
+for weeks within his shell, utterly\\
+ashamed, or looking up with tiny,\\
 wet eyes might offer an honest shrug.\\
 Forgive him.
 \end{verse}
