--- a/BF/BF 1001-Driver 2017.tex
+++ b/BF/BF 1001-Driver 2017.tex
@@ -1,4 +1,4 @@
-% Copyright (c) 2017 by Daniel R. Driver.
+% Copyright (c) 2018 by Daniel R. Driver.
 % !TEX encoding = UTF-8 Unicode
 % !TEX TS-program = XeLaTeX
 
@@ -12,7 +12,7 @@
 \input{\incl/variables}
 
 %\onlinetrue % \Int{true}{false}
-\coursecode[3.2.1]{BF 1001}
+\coursecode[3.5-WIP]{BF 1001}
 \coursetitle[Biblical Foundations]{Hebrew Bible/Old Testament}
 
 % Taught as RLGS 1013 in:
@@ -36,15 +36,16 @@
 %   - Fall 2016
 %   - Fall 2017
 %   - Fall 2017(Int - online section run parallel to campus course)
+%   - Fall 2018
 
 \professor{Daniel R. Driver}
 \phone{902-425-7051}
 \email{ddriver@astheology.ns.ca}
-\officehours{Tuesdays, 2:00--4:00 \PM}
+\officehours{Mondays, 3:45--4:30 \PM}
 
-\semester{Fall Term 2017}
-\meets{\Int{Thursdays}{Tuesdays}}% \meets{on}{at}{in}
-      {9:00--11:30 \AM}
+\semester{Fall Term 2018}
+\meets{\Int{Thursdays}{Mondays}}% \meets{on}{at}{in}
+      {1:00--3:30 \PM}
       {Classroom 3}
 \website{astheology.ns.ca}
 \cdescription{% copy from the current Academic Calendar
@@ -74,7 +75,7 @@
 		locate a few important biblical sites on a map;
 		give key dates for Israel's history and summarize the succession of superpowers in the Ancient Near Eastern political theatre from Egypt to Greece;
 		recognize and cite examples of most genres of biblical literature;
-%		defend a decision to pronounce or circumlocute the divine name;		
+%		defend a decision to pronounce or circumlocute the divine name;
 		understand the general shape of the Masoretic Text tradition and differentiate it from other canonical orders;
 		report on parallel and divergent material across the Law and the Prophets, such as the uses of the Divine Name or the rationales for sabbath observance;
 		classify a variety of ancient and modern approaches to the Bible, including traditional “plain sense” and figural reading strategies as well as historical criticism and its legacy.
@@ -116,25 +117,25 @@ have been placed on a 2-hour reserve.
 \begin{thebibliography}{Irenaeus}% use the longest item in the bibliography
 
 	\bibitem[NRSV]{nrsv} M.\,D. Coogan, ed.
-    \emph{New Oxford Annotated Bible with Apocrypha: NRSV}. 4th ed.
-    Oxford / New York: Oxford University Press, 2010.
-    ISBN 978-0195289602.
+    \emph{New Oxford Annotated Bible with Apocrypha: NRSV}. 5th ed.
+    Oxford / New York: Oxford University Press, 2018.
+    ISBN 978-0190276089.
 
 	\bibitem[HBFB]{hbfb} J. Kaminsky and J. Lohr.
 	\emph{The Hebrew Bible for Beginners: A Jewish and Christian Introduction}.
 	Nashville: Abingdon Press, 2015.
 	ISBN 978-1426775635.
 
-	\bibitem[Heschel]{heschel} Abraham Heschel.
-	\emph{The Sabbath: Its Meaning for Modern Man}.
-	New York: Farrar, Straus and Giroux, 1951 (repr. 2005).
-	ISBN 978-0374529758.
+%	\bibitem[Heschel]{heschel} Abraham Heschel.
+%	\emph{The Sabbath: Its Meaning for Modern Man}.
+%	New York: Farrar, Straus and Giroux, 1951 (repr. 2005).
+%	ISBN 978-0374529758.
 
-	\bibitem[Irenaeus]{irenaeus} St Irenaeus of Lyons.
-	\emph{On the Apostolic Preaching}.
-	Trans. John Behr.
-	Crestwood, NY: St Vladimir’s Seminary Press, 1997.
-	ISBN 978-0881411744.
+%	\bibitem[Irenaeus]{irenaeus} St Irenaeus of Lyons.
+%	\emph{On the Apostolic Preaching}.
+%	Trans. John Behr.
+%	Crestwood, NY: St Vladimir’s Seminary Press, 1997.
+%	ISBN 978-0881411744.
 
 \end{thebibliography}
 \endgroup
@@ -148,16 +149,39 @@ available in the library, and it is well worth consulting.
 \label{supplementary}
 
 Supplementary readings will be recommended throughout the semester.
-Excerpts from this literature, ordinarily an article or a book chapter
-per week, will either be placed on reserve or made available for
-download through the course website.
+Excerpts from this literature will either be placed on reserve or made
+available through the course website. Give this material some good
+attention and effort. Some readings may have assignments attached to
+them, but even if not, the selections represent some of the best
+contemporary readers of the HB/OT, and you will not want to miss out on
+their hermeneutical and theological insights.
 
-Students are not strictly required to read this additional material;
-then again, students who choose not to read it should not expect to
-receive an ``A'' for the course. Stated more positively, these
-selections represent some of the best contemporary readers of the HB/OT,
-and you will not want to miss out on their hermeneutical and theological
-insights.
+In addition, the following reference works are worth owning and
+consulting. First, \cite{rlgs} includes sound advice on things like
+reading religious texts, writing essays and book reviews, making oral
+presentations, and learning languages. Second, \cite{sbl2} is a standard
+reference in the field, useful to beginning students and specialists in
+biblical studies alike.
+
+\begingroup
+\renewcommand{\section}[2]{}% temporarily remove the section heading
+\begin{thebibliography}{9}% use the longest item in the bibliography
+
+	\bibitem{rlgs} Northey, Margot, Bradford A. Anderson, and Joel N. Lohr.
+	\emph{Making Sense in Religious Studies: A Student's Guide to Research and Writing}.
+	3rd ed. Don Mills, ON: Oxford University Press, 2019. ISBN 978-0199026838.
+
+	\bibitem{sbl2} Collins, Billie Jean, et al.
+	\emph{The SBL Handbook of Style}.
+	2nd ed. Atlanta: SBL Press, 2014. % ISBN 978-1589839649.
+	Designed to augment \href{http://www.chicagomanualofstyle.org/home.html}{\emph{The Chicago Manual of Style}},
+	which is the standard at AST, there is also a free
+	“\href{https://www.sbl-site.org/assets/pdfs/pubs/SBLHSsupp2015-02.pdf}{Student Supplement for \emph{The SBL Handbook of Style}, Second Edition}.”
+
+\end{thebibliography}
+\endgroup
+
+
 
 \section{Course Outline}
 \label{outline}
