--- a/HEBR/2013-Hebrew-I.tex
+++ b/HEBR/2013-Hebrew-I.tex
@@ -1,4 +1,4 @@
-% Copyright (c) 2015 by Daniel R. Driver.
+% Copyright (c) 2016 by Daniel R. Driver.
 % !TEX encoding = UTF-8 Unicode
 % !TEX TS-program = XeLaTeX
 
@@ -11,8 +11,8 @@
 \newcommand\incl{../includes}
 \input{\incl/variables}
 
-\coursecode[4.0]{HEBR 2013}
-\coursetitle{Introduction to Biblical Hebrew I}
+\coursecode[4.0]{HB 2201} % rething version number; 4.0 was for HEBR 2013 at Tyndale, Fall 2015
+\coursetitle{Beginning Biblical Hebrew I}
 
 \professor{Daniel R. Driver}
 \phone{416.226.6620 x2201}
@@ -63,16 +63,23 @@ All required textbooks are available in the Tyndale Bookstore.
 \begin{thebibliography}{BBH}% use the longest item in the bibliography
 
     \bibitem[BBH]{bbh}
-    John A. Cook and Robert D. Holmstedt. \emph{Beginning Biblical Hebrew: A
-    Grammar and Illustrated Reader}. Grand Rapids: Baker Academic, 2013. Note
-    that this textbook includes a significant set of study aids at
-    <\href{http://bakerpublishinggroup.com/books/beginning-biblical-hebrew/342630/esources}{www.bakeracademic.com}>.
+    John A. Cook and Robert D. Holmstedt.
+    \emph{Beginning Biblical Hebrew: A Grammar and Illustrated Reader}.
+    Grand Rapids: Baker Academic, 2013. Note that this textbook includes a significant set of study aids at
+    <\href{http://www.bakerpublishinggroup.com/books/beginning-biblical-hebrew/342630/students/esources}{www.bakeracademic.com}>.
+
+    \bibitem[TM]{tm}
+    Takamitsu Muraoka.
+    \emph{A Biblical Hebrew Reader: With an Outline Grammar}.
+    Leuven: Peeters, 2017. ISBN 978-9042934900.
 
     \bibitem[BSH]{bhs}
-    \emph{Biblia Hebraica Stuttgartensia}. Paperback\slash Student ed.
-    Stuttgart: Deutsche Bibel\-ge\-sell\-schaft, 1997.  Students will be asked to
-    have a criticial edition of the Hebrew Bible by the start of the Winter
-    semester. The instructor will provide photocopies in the interim.
+    \emph{Biblia Hebraica Stuttgartensia}.
+    Stuttgart: Deutsche Bibel\-ge\-sell\-schaft, 1997. ISBN 978-1598561630.
+    A paperback edition, marketed to students, is also available.
+    Students will be asked to have a criticial edition of the Hebrew
+    Bible by the start of the Winter semester. The instructor will
+    provide photocopies in the interim.
 
 \end{thebibliography}
 \endgroup
