start update of BF 1001 for Fall 2018 semester

--- a/BF/BF 1001-Driver 2018.tex
+++ b/BF/BF 1001-Driver 2018.tex
@@ -118,8 +118,8 @@ have been placed on a 2-hour reserve.
 
 	\bibitem[NRSV]{nrsv} M.\,D. Coogan, ed.
     \emph{New Oxford Annotated Bible with Apocrypha: NRSV}. 5th ed.
-    Oxford / New York: Oxford University Press, 2018.
-    ISBN 978-0190276089.
+    Oxford: Oxford University Press, 2018.
+    ISBN 978-0190276072.
 
 	\bibitem[HBFB]{hbfb} J. Kaminsky and J. Lohr.
 	\emph{The Hebrew Bible for Beginners: A Jewish and Christian Introduction}.
@@ -142,7 +142,7 @@ have been placed on a 2-hour reserve.
 
 An acceptable alternative study Bible is the NJPS: Adele Berlin and Marc
 Zvi Brettler, eds., \emph{The Jewish Study Bible: Second Edition}
-(Oxford / New York: Oxford University Press, 2014). A reference copy is
+(Oxford: Oxford University Press, 2014). A reference copy is
 available in the library, and it is well worth consulting.
 
 \section{Supplementary Texts}
